// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: OriginalDataCenter.proto

package com.kafka.packagedata.proto.devicestat;

public interface DeviceAfcEventOrBuilder extends
    // @@protoc_insertion_point(interface_extends:package.parse.hx.DeviceAfcEvent)
    com.google.protobuf.MessageOrBuilder {

  /**
   * <code>string src_node = 1;</code>
   * @return The srcNode.
   */
  java.lang.String getSrcNode();
  /**
   * <code>string src_node = 1;</code>
   * @return The bytes for srcNode.
   */
  com.google.protobuf.ByteString
      getSrcNodeBytes();

  /**
   * <code>string event_time = 2;</code>
   * @return The eventTime.
   */
  java.lang.String getEventTime();
  /**
   * <code>string event_time = 2;</code>
   * @return The bytes for eventTime.
   */
  com.google.protobuf.ByteString
      getEventTimeBytes();

  /**
   * <code>string state0 = 3;</code>
   * @return The state0.
   */
  java.lang.String getState0();
  /**
   * <code>string state0 = 3;</code>
   * @return The bytes for state0.
   */
  com.google.protobuf.ByteString
      getState0Bytes();

  /**
   * <code>string state1 = 4;</code>
   * @return The state1.
   */
  java.lang.String getState1();
  /**
   * <code>string state1 = 4;</code>
   * @return The bytes for state1.
   */
  com.google.protobuf.ByteString
      getState1Bytes();

  /**
   * <code>string relate_node_id = 5;</code>
   * @return The relateNodeId.
   */
  java.lang.String getRelateNodeId();
  /**
   * <code>string relate_node_id = 5;</code>
   * @return The bytes for relateNodeId.
   */
  com.google.protobuf.ByteString
      getRelateNodeIdBytes();

  /**
   * <code>string action = 6;</code>
   * @return The action.
   */
  java.lang.String getAction();
  /**
   * <code>string action = 6;</code>
   * @return The bytes for action.
   */
  com.google.protobuf.ByteString
      getActionBytes();

  /**
   * <code>string event_code = 7;</code>
   * @return The eventCode.
   */
  java.lang.String getEventCode();
  /**
   * <code>string event_code = 7;</code>
   * @return The bytes for eventCode.
   */
  com.google.protobuf.ByteString
      getEventCodeBytes();
}
