// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: OriginalDataCenter.proto

package com.kafka.packagedata.proto.devicestat;

public interface OriginalAfcDeviceStateOrBuilder extends
    // @@protoc_insertion_point(interface_extends:package.parse.hx.OriginalAfcDeviceState)
    com.google.protobuf.MessageOrBuilder {

  /**
   * <code>repeated .package.parse.hx.DeviceAfcEvent device_event_list = 1;</code>
   */
  java.util.List<com.kafka.packagedata.proto.devicestat.DeviceAfcEvent> 
      getDeviceEventListList();
  /**
   * <code>repeated .package.parse.hx.DeviceAfcEvent device_event_list = 1;</code>
   */
  com.kafka.packagedata.proto.devicestat.DeviceAfcEvent getDeviceEventList(int index);
  /**
   * <code>repeated .package.parse.hx.DeviceAfcEvent device_event_list = 1;</code>
   */
  int getDeviceEventListCount();
  /**
   * <code>repeated .package.parse.hx.DeviceAfcEvent device_event_list = 1;</code>
   */
  java.util.List<? extends com.kafka.packagedata.proto.devicestat.DeviceAfcEventOrBuilder> 
      getDeviceEventListOrBuilderList();
  /**
   * <code>repeated .package.parse.hx.DeviceAfcEvent device_event_list = 1;</code>
   */
  com.kafka.packagedata.proto.devicestat.DeviceAfcEventOrBuilder getDeviceEventListOrBuilder(
      int index);
}
