// Generated by the protocol buffer compiler.  DO NOT EDIT!
// source: OriginalDataCenter.proto

package com.kafka.packagedata.proto.devicestat;

public final class devicestat {
  private devicestat() {}
  public static void registerAllExtensions(
      com.google.protobuf.ExtensionRegistryLite registry) {
  }

  public static void registerAllExtensions(
      com.google.protobuf.ExtensionRegistry registry) {
    registerAllExtensions(
        (com.google.protobuf.ExtensionRegistryLite) registry);
  }
  static final com.google.protobuf.Descriptors.Descriptor
    internal_static_package_parse_hx_OriginalAfcDeviceState_descriptor;
  static final 
    com.google.protobuf.GeneratedMessageV3.FieldAccessorTable
      internal_static_package_parse_hx_OriginalAfcDeviceState_fieldAccessorTable;
  static final com.google.protobuf.Descriptors.Descriptor
    internal_static_package_parse_hx_DeviceAfcEvent_descriptor;
  static final 
    com.google.protobuf.GeneratedMessageV3.FieldAccessorTable
      internal_static_package_parse_hx_DeviceAfcEvent_fieldAccessorTable;

  public static com.google.protobuf.Descriptors.FileDescriptor
      getDescriptor() {
    return descriptor;
  }
  private static  com.google.protobuf.Descriptors.FileDescriptor
      descriptor;
  static {
    java.lang.String[] descriptorData = {
      "\n\030OriginalDataCenter.proto\022\020package.pars" +
      "e.hx\"U\n\026OriginalAfcDeviceState\022;\n\021device" +
      "_event_list\030\001 \003(\0132 .package.parse.hx.Dev" +
      "iceAfcEvent\"\222\001\n\016DeviceAfcEvent\022\020\n\010src_no" +
      "de\030\001 \001(\t\022\022\n\nevent_time\030\002 \001(\t\022\016\n\006state0\030\003" +
      " \001(\t\022\016\n\006state1\030\004 \001(\t\022\026\n\016relate_node_id\030\005" +
      " \001(\t\022\016\n\006action\030\006 \001(\t\022\022\n\nevent_code\030\007 \001(\t" +
      "B6\n&com.kafka.packagedata.proto.devicest" +
      "atB\ndevicestatP\001b\006proto3"
    };
    descriptor = com.google.protobuf.Descriptors.FileDescriptor
      .internalBuildGeneratedFileFrom(descriptorData,
        new com.google.protobuf.Descriptors.FileDescriptor[] {
        });
    internal_static_package_parse_hx_OriginalAfcDeviceState_descriptor =
      getDescriptor().getMessageTypes().get(0);
    internal_static_package_parse_hx_OriginalAfcDeviceState_fieldAccessorTable = new
      com.google.protobuf.GeneratedMessageV3.FieldAccessorTable(
        internal_static_package_parse_hx_OriginalAfcDeviceState_descriptor,
        new java.lang.String[] { "DeviceEventList", });
    internal_static_package_parse_hx_DeviceAfcEvent_descriptor =
      getDescriptor().getMessageTypes().get(1);
    internal_static_package_parse_hx_DeviceAfcEvent_fieldAccessorTable = new
      com.google.protobuf.GeneratedMessageV3.FieldAccessorTable(
        internal_static_package_parse_hx_DeviceAfcEvent_descriptor,
        new java.lang.String[] { "SrcNode", "EventTime", "State0", "State1", "RelateNodeId", "Action", "EventCode", });
  }

  // @@protoc_insertion_point(outer_class_scope)
}
